PIRATE-4048 default page spacing fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -54,10 +54,6 @@ body {
     & > * {
         flex: 0 0 auto;
     }
-    & > .container,
-    & > .bk-pt-default {
-        flex: 1 0 auto;
-    }
 }
 
 // Page Container
@@ -167,14 +163,6 @@ body {
 
 // #Default Page
 // -------------
-
-// Sticky Footer
-.bk-pt-default {
-    flex: 1;
-}
-
-.bk-pt-default .container {
-}
 
 // Default Page Title
 .template-title {
